@@ -1,33 +1,24 @@
 <!-- ============= Search  ============--> 
 <chapter id="search">
-	<title>Searching</title>
-	<sect1 id="gnomesword-search">
-		<title>Using The Search Functions</title>
-		<para>
-		The Search dialog can be activated by choosing <menuchoice><guisubmenu>Edit
-		</guisubmenu><guimenuitem>Search</guimenuitem></menuchoice>
-		</para>
-		<para>
-        This is what the Search Dialog typically looks like:
-        </para>
-        <figure>
-        	<title>The Search Dialog</title>
-            <screenshot>
-            	<mediaobject>
-                	<imageobject>
-                    	<imagedata fileref="figures/interface_search" format="PNG"/>
-                    </imageobject>
-                    <textobject>
-                	    <phrase>The Search Dialog</phrase>
-                    </textobject>
-                </mediaobject>
-            </screenshot>
-		</figure>
-	</sect1>
+	<title>The Search Function</title>
+	<sect1 id="gnomesword-searchpane">
+		<title>Simple Searches</title>
+		<para> To conduct a quick search within the current module the 'Search Bar' in the 'Side Pane' should usually be absolutely adequate. 	Click either in the menu bar <guimenuitem>Edit-&gt;Search</guimenuitem> or in the 'Side Pane' <guimenuitem> Modules -&gt;Search</guimenuitem> to access it.</para> 
 	
-	<sect1 id="gnomesword-search-dialog">
-		<title>The Search Dialog</title>
-		<para>
+		<figure>
+		<title>The Search Bar</title>
+		<screenshot>
+	 	       <mediaobject>
+		      		<imageobject>
+				        <imagedata fileref="figures/interface_searchpane" format="PNG"/>
+				</imageobject>
+			 	<textobject>
+		     			<phrase>The Search Bar</phrase>
+				</textobject>
+		       </mediaobject>
+		 </screenshot>
+	    </figure>
+	   <para>
 		The <interface>Search Dialog</interface> consists of the following parts:
 		</para>
 			<itemizedlist>
@@ -56,8 +47,7 @@
 					Search Scope Selector
 					</para>
 				</listitem>
-			</itemizedlist>
-		
+			</itemizedlist>			
 		<sect2 id="gnomesword-search-key">
 			<title>Search Key Entry Box</title>
 			<para>Allows entry of the key for which you would like to search. The 
@@ -159,4 +149,247 @@
 			</variablelist> 
 		</sect2>
 	</sect1>
+	<sect1 id="gnomesword-advanced-search">
+	   <title> Advanced Searches</title> 
+	   <para> More complicated searches might require the use of the advanced search functions, found under <guimenuitem>Edit-&gt;Advanced Search</guimenuitem></para>
+
+	 
+	     <figure>
+		<title>The Advanced Search Dialogue</title>
+		<screenshot>
+	 	       <mediaobject>
+		      		<imageobject>
+				        <imagedata fileref="figures/gnomesword_advanced_search" format="PNG"/>
+				</imageobject>
+			 	<textobject>
+		     			<phrase>The Advanced Search Dialogue</phrase>
+				</textobject>
+		       </mediaobject>
+		 </screenshot>
+	   </figure>
+	   
+	 
+	   <warning>
+	   	<para>
+		 Changes to some of the settings (e.g. scope of search, searched modules, etc.) in Advanced Search will 	affect the simple search via the side pane but not vice versa.
+		</para>
+	   </warning>  
+	   </sect1>
+
+	<sect1 id="hdbk-op-search-dialog-text-regexp">
+		<title>Search Syntax using GCC Regular Expression</title>
+
+		<para>
+			Regular expression searches provide a way to do simple or complex searches for strings that match a pattern or set of patterns (branches) separated by vertical bars &quot;|&quot;. While a pattern can be built to look for a word or phrase, a simple pattern that consists of a word does not look for only that word but for any place the string of letters that make that word are found. A search for &quot;right&quot; will return verses that contain the word &quot;right&quot;, but also &quot;<emphasis>right</emphasis>eous&quot;, &quot;<emphasis>right</emphasis>eousness&quot;, &quot;un<emphasis>right</emphasis>eous&quot;, &quot;up<emphasis>right</emphasis>&quot; and even &quot;b<emphasis>right</emphasis>&quot;. A search for &quot;hall not&quot; is not a search for &quot;hall&quot; AND &quot;not&quot; but for the string &quot;hall not&quot; with a space between the second &quot;l&quot; and the &quot;n&quot;. The search for &quot;hall not&quot; will find occurrences of &quot;s<emphasis>hall not</emphasis>&quot;.
+		</para>
+		<para>
+			The power of Regular Expressions is in the patterns (or templates) used to define a search. A pattern consists of
+ordinary characters and some special characters that are used and interpreted by a set of rules. Special characters include
+.\[^*$?+. Ordinary (or simple) characters are any characters that are not special. The backslash, &quot;\&quot;, is used to convert special characters to ordinary and ordinary characters to special.
+		 </para>
+		<para>
+			Example: the pattern &quot;<emphasis>i. love\.</emphasis>&quot; will find sentences that end with &quot;h<emphasis>i</emphasis>s <emphasis>love</emphasis>&quot; or &quot;<emphasis>i</emphasis>n <emphasis>love</emphasis>&quot; or &quot;<emphasis>i</emphasis>s <emphasis>love</emphasis>&quot; followed by
+a period. The first period in &quot;i. love\.&quot; is a special character that means allow any character in this position. The
+backslash in &quot;i. love\.&quot; means that the period following it is not to be considered a special character, but is
+an ordinary period. 
+		</para>
+
+		<sect2 id="hdbk-op-search-dialog-text-regexp-rules">
+			<title>Rules for GCC Regular Expression Search Requests</title>
+			<itemizedlist>
+<listitem><para>. The period matches any character. See <link
+	linkend="period">Details</link></para></listitem>
+<listitem><para>* The asterisk matches 0 or more characters of the
+	preceding: set, character or indicated character. See <link
+	linkend="asterisk">Details</link></para></listitem>
+<listitem><para>+ The plus sign matches 1 or more characters of the
+	preceding: set, character or indicated character. See <link
+	linkend="plus">Details</link></para></listitem>
+<listitem><para>? The question mark matches 0 or 1 character of the
+	preceding: set, character or indicated character. See <link
+	linkend="question">Details</link></para></listitem>
+<listitem><para>[ ] Square brackets match any one of the characters
+	specified inside [ ]. See <link linkend="bracket">Details</link></para></listitem>
+<listitem><para>^ A caret as the first character inside [ ] means NOT. See
+	<link linkend="caret">Details</link></para></listitem>
+<listitem><para>^ A caret beginning a pattern anchors the beginning of a
+	line. See <link linkend="caret">Details</link></para></listitem>
+<listitem><para>$ A dollar at the end of a pattern anchors the end of a
+	line. See <link linkend="dollar">Details</link></para></listitem>
+<listitem><para>| A vertical bar means logical OR. See <link
+	linkend="bar">Details</link></para></listitem>
+<listitem><para>( ) Parentheses enclose expressions for grouping.
+<emphasis>Not supported!</emphasis></para></listitem>
+<listitem><para>\ A backslash can be used prior to any special character
+	to match that character. See <link linkend="backslash">Details</link></para></listitem>
+<listitem><para>\ A backslash can be used prior to an ordinary character
+	to make it a special character. See <link linkend="backslash">Details</link></para></listitem>
+</itemizedlist>
+
+<sect3 id="period">
+<title>The Period .</title>
+
+<para>The Period &quot;.&quot; will match any single character even
+a space or other non-alphabet character.
+<emphasis>s.t</emphasis> matches <emphasis>s</emphasis>i<emphasis>t</emphasis>,
+<emphasis>s</emphasis>e<emphasis>t</emphasis>,<emphasis> s</emphasis>o<emphasis>t</emphasis>,
+etc., which could be located in <emphasis>s</emphasis>i<emphasis>t</emphasis>ting,
+compas<emphasis>s</emphasis>e<emphasis>t</emphasis>h and <emphasis>s</emphasis>o<emphasis>t</emphasis>tish
+<emphasis>b..t</emphasis> matches <emphasis>b</emphasis>oo<emphasis>t</emphasis>,
+<emphasis>b</emphasis>oa<emphasis>t</emphasis> and <emphasis>b</emphasis>ea<emphasis>t
+foot.tool </emphasis>matches <emphasis>foot</emphasis>s<emphasis>tool </emphasis>and
+<emphasis>foot tool</emphasis></para>
+</sect3>
+
+
+<sect3 id="asterisk">
+<title>The Asterisk *</title>
+
+<para>The asterisk matches zero or more characters of the preceding:
+set, character or indicated character. Using
+a period asterisk combination &quot;.*&quot; after a commonly
+found pattern can cause the search to take a very long time,
+making the program seem to freeze.
+<emphasis>be*n</emphasis> matches<emphasis> beeen, been, ben</emphasis>,
+and <emphasis>bn</emphasis> which could locate Reu<emphasis>ben</emphasis>
+and She<emphasis>bn</emphasis>a.</para>
+</sect3>
+
+
+<sect3 id="plus">
+<title>The Plus Sign +</title>
+<para>The Plus Sign matches one or more characters of the preceding:
+set, character or indicated character. Using
+a period and plus sign combination &quot;.+&quot; after a
+commonly found pattern can cause the search to take a very long
+time, making the program seem to freeze.
+<emphasis>be+n</emphasis> matches <emphasis>beeen, been</emphasis> and <emphasis>ben</emphasis>,
+but not <emphasis>bn</emphasis>.</para>
+</sect3>
+
+
+<sect3 id="question">
+<title>The Question Mark ?</title>
+<para>The Question Mark matches zero or one character of the
+preceding: set, character or indicated character.
+<emphasis>be?n</emphasis> matches <emphasis>ben</emphasis> and <emphasis>bn</emphasis>
+but not <emphasis>been</emphasis>.
+<emphasis>trees?</emphasis> matches <emphasis>trees</emphasis> or <emphasis>tree</emphasis>.</para>
+</sect3>
+
+
+<sect3 id="bracket">
+<title>The Square Brackets [ ]</title>
+<para>The Square Brackets enclose a set of characters that can
+match. The period, asterisk, plus sign and question mark are not
+special inside the brackets. A minus sign can be used to indicate
+a range. If you want a caret &quot;^&quot; to be part of the
+range do not place it first after the left bracket or it will be
+a special character. To include a &quot;]&quot; in the set make
+it the first (or second after a special &quot;^&quot;) character
+in the set. To include a minus sign in the set make it the first
+(or second after a special &quot;^&quot;) or last character in
+the set.
+<emphasis>s[eia]t</emphasis> matches <emphasis>set</emphasis>, <emphasis>sit</emphasis>,
+and <emphasis>sat</emphasis>, but not <emphasis>s</emphasis>o<emphasis>t</emphasis>.
+<emphasis>s[eia]+t </emphasis>matches as above but also, <emphasis>seat,
+seet, siet</emphasis>, etc.
+<emphasis>[a-d]</emphasis> matches <emphasis>a, b, c,</emphasis> or <emphasis>d</emphasis>.
+<emphasis>[A-Z]</emphasis> matches any uppercase letter.
+[.;:?!] matches ., ;, :, ?, or ! but not a comma.
+[ ]^-] matches ] or ^ or -</para>
+</sect3>
+
+
+<sect3 id="caret">
+<title>The Caret first in Square Brackets [^xxx</title>
+<para>If the Caret is the first character after the left bracket it
+means NOT.
+<emphasis>s[^io]t</emphasis> matches <emphasis>set, sat</emphasis>, etc.,
+but not <emphasis>s</emphasis>i<emphasis>t</emphasis> and <emphasis>s</emphasis>o<emphasis>t</emphasis>.</para>
+</sect3>
+
+<sect3 id="caret-s">
+<title>The Caret as Start of Line Anchor ^xxx</title>
+<para>If the Caret is the first character in a pattern it anchors
+the pattern to the start of a line. Any match must be at the
+beginning of a line. Because of unfiltered
+formatting characters in some texts, this feature does not always
+work, but may if a few periods are placed after the caret to
+account for the formatting characters.
+<emphasis>^In the beginning</emphasis> matches lines that
+start with &quot;<emphasis>In the beginning</emphasis>&quot;.
+(May need to use: <emphasis>^.....In the beginning</emphasis>)</para>
+</sect3>
+
+
+<sect3 id="dollar">
+<title>The Dollar Sign as End of Line Anchor xxx$</title>
+<para>If the Dollar Sign is the last character in a pattern it
+anchors the pattern to the end of a line. Any match must be at
+the end of a line. Because of unfiltered
+formatting characters in some texts, this feature does not always
+work, but may if a few periods are placed before the dollar sign
+to account for the formatting characters.
+<emphasis>Amen\.$</emphasis> matches lines that end with
+&quot;<emphasis>Amen.</emphasis>&quot; (May
+need to use Amen\....$, Amen\..........$, or even
+Amen\....................$)</para>
+</sect3>
+
+
+<sect3 id="bar">
+<title>The Vertical Bar |</title>
+<para>The Vertical Bar between patterns means OR.
+<emphasis>John|Peter</emphasis> matches <emphasis>John</emphasis> or <emphasis>Peter.
+John .*Peter|Peter .*John</emphasis> matches <emphasis>John</emphasis>
+... <emphasis>Peter</emphasis> or <emphasis>Peter</emphasis> ... <emphasis>John</emphasis>.
+(.* slows a search)
+<emphasis>pain|suffering|sorrow</emphasis> matches <emphasis>pain</emphasis>,
+or <emphasis>suffering</emphasis>, or <emphasis>sorrow</emphasis>.</para>
+</sect3>
+
+
+<sect3 id="parenth">
+<title>The Parentheses ( ) </title>
+<para><emphasis>The use of Parentheses ( ) is
+not supported!</emphasis></para>
+</sect3>
+
+
+<sect3 id="backslash">
+<title>The Backslash Prior to a Special Character \*</title>
+<para>The Backslash prior to a special character indicates that the
+character is not being used in its special meaning, but is just
+to match itself.
+<emphasis>amen\.</emphasis> matches <emphasis>amen.</emphasis> but not <emphasis>amen</emphasis>t
+and will not locate firm<emphasis>amen</emphasis>t.</para>
+</sect3>
+
+<sect3 id="backslash-o">
+<title>The Backslash Prior to an Ordinary Character \s</title>
+
+<para>The Backslash prior to an ordinary character indicates that
+the character is not being used to match itself, but has special
+meaning.</para>
+
+<itemizedlist>
+<listitem><para>
+\b if use outside [ ] means word boundary. If used inside [ ] means backspace.
+<emphasis>\brighteous\b</emphasis> matches <emphasis>righteous</emphasis> but
+not un<emphasis>righteous</emphasis> or <emphasis>righteous</emphasis>ness</para></listitem>
+<listitem><para>\B means non-word boundary.  <emphasis>\Brighteous\B</emphasis>
+matches un<emphasis>righteous</emphasis>ness and un<emphasis>righteous</emphasis>ly
+but not <emphasis>righteous</emphasis>, un<emphasis>righteous</emphasis> or <emphasis>
+righteous</emphasis>ness.</para></listitem>
+<listitem><para>\d means digit; same as [0-9].</para></listitem>
+<listitem><para>\D means non-digit, same as [^0-9].</para></listitem>
+<listitem><para>\s means space. </para></listitem>
+<listitem><para>\S means not a space. </para></listitem>
+<listitem><para>\w means alphanumeric; same as [a-zA-Z0-9_].</para></listitem>
+<listitem><para>\W means not alphanumeric; same as [^a-zA-Z0-9_].</para></listitem>
+</itemizedlist>
+</sect3>
+</sect2>
+</sect1>
 </chapter>
